products/media/radarr/templates/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: radarr-security-policy
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: radarr
  oidc:
    clientID: "R0MUbMfNXnw4z74imyAR02VVu7JIIVhwJC4B9JXu"
    clientSecret:
      name: radarr-oidc-secret
    provider:
      issuer: https://authentik.feddema.dev/application/o/radarr/
    redirectURL: https://radarr.feddema.dev/oauth2/callback
    logoutPath: /oauth2/logout
